--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t kalyano/docker-react -f Dockerfile-dev .
+  - docker build -t kalyano/docker-react -f Docker-dev .
 
 script:
   - docker run -e CI=true kalyano/docker-react npm run test
