--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
 
 script:
   - docker run -e CI=true kalyano/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-1
+  app: docker-react
+  env: DockerReact-env
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
+  bucket_name: "elasticbeanstalk-us-east-1-829176097181"
+  bucket_path: "docker-react"
+  on:
+    branch: master
