--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: us-east-1
-  app: docker-react
-  env: DockerReact-env
+  app: docker
+  env: Docker-env
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: 
     secure: "$AWS_SECRET_KEY"
   bucket_name: "elasticbeanstalk-us-east-1-829176097181"
-  bucket_path: "docker-react"
+  bucket_path: "docker"
   on:
     branch: master
