--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ deploy:
   env: Docker-env
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: 
-    secure: "$AWS_SECRET_KEY"
+    secure: $AWS_SECRET_KEY
   bucket_name: "elasticbeanstalk-us-east-1-829176097181"
   bucket_path: "docker"
   on:
