--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,8 @@ deploy:
   region: us-east-1
   app: docker
   env: Docker-env
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: 
-    secure: $AWS_SECRET_KEY
+  access_key_id: AKIA4CDV7FGORFKSVU4Q
+  secret_access_key: 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
   bucket_name: "elasticbeanstalk-us-east-1-829176097181"
   bucket_path: "docker"
   on:
